# mlops-rec-sys

./: .dockerignore  .flake8  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci-cd.yml  deploy-manual.yml
docker/: Dockerfile  docker-compose.yml  prometheus.yml
models/: recommendation_model.onnx
src/mlops_rec_sys/: client.py  server.py  test_client.py
src/mlops_rec_sys/proto/: recommendation.proto  recommendation_pb2.py  recommendation_pb2_grpc.py
src/scripts/: export_model.py
tests/: test_model.py
