[tool.poetry]
name = "mlops-rec-sys"
version = "0.1.0"
packages = [
    { include = "mlops_rec_sys", from = "src" }
]
description = ""
authors = ["Alexandra Korneeva <korneevasandra@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
torch = ">=2.8.0,<3.0.0"
numpy = ">=2.3.3,<3.0.0"
onnxruntime = ">=1.22.1,<2.0.0"
onnx = ">=1.19.0,<2.0.0"
grpcio = ">=1.75.0,<2.0.0"
grpcio-tools = ">=1.75.0,<2.0.0"
protobuf = ">=6.32.1,<7.0.0"
prometheus-client = ">=0.23.1,<0.24.0"
backoff = ">=2.2.1,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
