[project]
name = "mlops-rec-sys"
version = "0.1.0"
description = ""
authors = [
    { name = "Alexandra Korneeva", email = "korneevasandra@gmail.com" }
]

[tool.poetry]
name = "mlops-rec-sys"
version = "0.1.0"
packages = [
    { include = "mlops_rec_sys", from = "src" }
]
description = ""
authors = ["Alexandra Korneeva <korneevasandra@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
torch = ">=2.8.0,<3.0.0"
numpy = ">=2.3.3,<3.0.0"
onnxruntime = ">=1.22.1,<2.0.0"
onnx = ">=1.19.0,<2.0.0"
grpcio = ">=1.75.0,<2.0.0"
grpcio-tools = ">=1.75.0,<2.0.0"
protobuf = ">=6.32.1,<7.0.0"
prometheus-client = ">=0.23.1,<0.24.0"
backoff = ">=2.2.1,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 127
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | src/mlops_rec_sys/proto  # Игнорируем proto директорию
)/
'''

[tool.isort]
profile = "black"
line_length = 127
known_first_party = ["mlops_rec_sys"]

[tool.poetry.scripts]
mlops-rec-sys-server = "mlops_rec_sys.server:main"